--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -17,8 +17,11 @@ padding-top: 40px;
     gap: 20px;
     font-size: 20px;
 }
-@media all and (min-width: 768px) and (max-width: 1366px){
+
+  
+@media (max-width: 1366px) {
     #sidebar_Outer{
         display: none;
     }
-}
+  }
+  
