--- a/src/Components/Navbar/Navbar1.css
+++ b/src/Components/Navbar/Navbar1.css
@@ -6,7 +6,6 @@ nav {
   align-items: center;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   padding-left: 20px;
-  /* padding-right: 20px; */
 }
 #sidebar {
   font-size: 30px;
@@ -108,19 +107,30 @@ nav input {
   #brandname,#right-Side{
     display: none;
   }
+    #searchbarWrapper {
+    margin-left: 0px;
+    height: 20px;
+  }
 }
 
 @media (max-width: 508px) {
   nav input {
     width: 200px;
+    height: 20px;
   }
   #sidebar{
     display: none;
   }
   #searchbarWrapper {
     margin-left: 0px;
+    height: 20px;
   }
   nav {
     padding-left: 0px;
+  }
+  nav img {
+    width: 28px;
+    border-radius: 50%;
+    margin-left: 5px;
   }
 }
