--- a/src/Components/SingleProduct/Singleproduct.css
+++ b/src/Components/SingleProduct/Singleproduct.css
@@ -37,3 +37,16 @@
     text-decoration: line-through;
     color: gray;
 }
+#ofs{
+    color: red;
+    font-weight: 600;
+}
+#instock{
+    color: green;
+    font-weight: 600;
+}
+
+#low{
+    color: rgb(153, 150, 102);
+    font-weight: 600;
+}
